# 14-Statistics-And-Math

./: .gitignore  README.md  pyproject.toml
14_statistics_and_math/: 01-Stat-Notebook.ipynb  california_housing_map.html
14_statistics_and_math/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
14_statistics_and_math/catboost_info/learn/: events.out.tfevents
