[tool.poetry]
name = "14-statistics-and-math"
version = "0.1.0"
description = ""
authors = ["Erik F <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scipy = "^1.15.1"
statsmodels = "^0.14.4"
simpy = "^4.1.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
folium = "^0.19.4"
catboost = "^1.2.7"
xgboost = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
